metoda cu nume bun in loc de -> mare